--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -10,7 +10,7 @@
 
 /* FORMULARIO */
 .formulario {
-  background: url(../ProyectoHtml/silla.jpg) no-repeat center center;
+  background: url(/ProyectoHtml/silla.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
